@@ -1,3 +1,9 @@
+2019-01-08 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/stm8/gen.c,
+	  support/regression/tests/bug-2964.c:
+	  Fix bug #2964.
+
 2019-12-29 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/stm8/ralloc2.cc,
